<resources>
    <string name="app_name">De One</string>
    <string name="default_notification_channel_id">channel_primary</string>
    <string name="new_delivery_channel_id">newDeliveryNotification</string>

    <string name="ingresa_tu_pass">Ingresa tu contraseña</string>
    <string name="ingresa_tu_usuario">Ingresa tu usuario</string>
    <string name="no_esperes_mas">No esperes Más!</string>

    <string name="ingresa_tu_nuevo_pass">Ingresa tu nueva contraseña</string>
    <string name="ingresa_tu_nuevo_pass2">Ingresa la contraseña nuevamente</string>


    <string name="user_position_title">Tu posición</string>
    <string name="user_position_message">Aquí estas tú</string>
    <string name="client_position_title">Tu pedido</string>
    <string name="client_position_message">Aqui debes llegar</string>
    <string name="title_activity_maps">Map</string>
    <string name="fab_transition_name">fab_transition</string>

    <string name="grant_permissions">Otorgar Permisos</string>
    <string name="please_grant_permissions">Por favor otorga los permisos a la App</string>
    <string name="impassable_slide">No se que sera esto</string>

    <string name="check_to_pass">Yo acepto los terminos y condiciones.</string>
    <string name="error_message">Por favor acepta primero los terminos y condiciones.</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>

    //------------------------------------ Para localizacion ---------------------------------------------------

    <string name="remove_location_updates">Apagar Servicio</string>
    <string name="location_updated">Ubicacion Actual: %1$s</string>
    <string name="launch_activity">Abrir App</string>
    <string name="detener_busqueda">Detener Busqueda</string>
    <string name="launch_ver_pedido">Ver Pedido</string>

    <string name="permission_denied_explanation">El Permiso fue denegado, pero este es necesario para
        el funcionamiento de la App</string>
    <string name="permission_rationale">El permiso de Ubicación es necesario para el funcionamiento de la App</string>

    <string name="settings">Configuración</string>
    <string name="ok">OK</string>

</resources>
